--- a/assets/02-css/03-cssMiddleclass/03-css_counter.html
+++ b/assets/02-css/03-cssMiddleclass/03-css_counter.html
@@ -23,12 +23,29 @@
 	</blockquote>
 
 	<p class="mt_l">
-		Counter의 값은 content 속성에서 counter()나 counters() 함수를 사용하여 표시할 수 있습니다.<br>
-		일련 번호를 붙이려는 요소의 부모 요소에 counter-reset으로 시작하는 번호를 정하고, 일련 번호가 붙을 요소에 counter-increment로 증가량을 정합니다.<br>
-		<code>요소 {counter-reset: 카운터 이름 / 시작 숫자;}</code><br>
-		<code>요소 {counter-increment: 카운터 이름 / 증감 숫자;}</code><br>
-		<code>요소 {content: counter(카운터 이름);}</code>
+		Counter의 값은 <code>::before(::after)</code>의 <code>content</code> 속성에서 <code>counter()</code>나 <code>counters()</code> 함수를 사용하여 표시할 수 있습니다.<br>
+		일련 번호를 붙이려는 요소의 부모 요소에 <code>counter-reset</code>으로 시작하는 번호를 정하고, 일련 번호가 붙을 요소에 <code>counter-increment</code>로 증가량을 정합니다.<br>
 	</p>
+	<div class="uk_gist_code_box mt_ms" data-tit="CSS Counter">
+		<textarea readonly="readonly">
+			<!-- 마크업 예제 -->
+			<ol class="list">
+				<li><li>
+				<li><li>
+				<li><li>
+			</ol>
+
+			<!-- style 예제 -->
+			<style>
+				.list { counter-reset: 카운터 이름 / 시작 숫자; }
+				.list li { list-style: none; }
+				.list li:before {
+					counter-increment: 카운터 이름 / 증감 숫자;
+					content: counter(카운터 이름);
+				}
+			</style>
+		</textarea>
+	</div>
 
 	<!-- counter-reset 속성 -->
 	<section class="txt_ex indent mt_l">
@@ -36,7 +53,7 @@
 		<p class="mt_s">
 			카운터를 사용하려면, <code>counter-reset</code>으로 먼저 카운터 이름과 시작값을 설정 해야 합니다.<br>
 			<code>counter-reset</code> 속성을 사용하여 카운터 값을 임의의 숫자로 재설정 할 수 있습니다.<br>
-			<code>요소 {counter-reset: initial ｜ 카운터 이름/숫자 ｜ none }</code>
+			<code>요소 {counter-reset: initial | 카운터 이름/숫자 | none }</code>
 		</p>
 
 		<div class="ol_lst indent mt_s">
@@ -47,11 +64,26 @@
 				<li><b class="t_black weight-500">none</b> : 설정값이 없습니다. (이미 설정된 것을 취소하고자 할 때 사용합니다)</li>
 			</ol>
 		</div>
+		<div class="uk_gist_code_box mt_ms" data-tit="CSS Counter [counter-reset]">
+			<textarea readonly="readonly">
+				<!-- html 예제 -->
+				<ol class="list">
+					<li><li>
+					<li><li>
+					<li><li>
+				</ol>
 
-		<div class="ex_code edit_code mt_m" data-target="css/step02/3.3.counter/3.3.counter-reset.html">
-			<div class="uk_editor min-height-500" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+				<!-- style 예제 -->
+				<style>
+					.list {
+						counter-reset: title; /* 카운터 이름을 'title'로 설정, 기본값 0으로 지정 */
+						counter-reset: none; /* 설정값을 취소 */
+						&nbsp;
+						/* 여러 카운터를 동시에 설정도 가능(공란으로 분리) */
+						counter-reset: chapter section 1 page; /* chapter와 page는 시작값을 0으로 설정하며 section은 1로 설정 */
+					}
+				</style>
+			</textarea>
 		</div>
 	</section>
 
@@ -70,11 +102,25 @@
 				<li><b class="t_black weight-500">none</b> : 설정값이 없습니다. (이미 설정된 것을 취소하고자 할 때 사용합니다.)</li>
 			</ol>
 		</div>
+		<div class="uk_gist_code_box mt_ms" data-tit="CSS Counter [counter-increment]">
+			<textarea readonly="readonly">
+				<!-- html 예제 -->
+				<ol class="list">
+					<li><li>
+					<li><li>
+					<li><li>
+				</ol>
 
-		<div class="ex_code edit_code mt_m" data-target="css/step02/3.3.counter/3.3.counter-increment.html">
-			<div class="uk_editor min-height-500" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+				<!-- style 예제 -->
+				<style>
+					.list li:before {
+						counter-increment:chapter; /* 숫자를 설정하지 않으면 기본값으로 1씩 증가함. */
+						counter-increment:chapter -1; /* 1씩 감소. */
+						counter-increment:chapter 2 section -1; /* chapter는 2씩 증가, section은 -1씩 감소. */
+						counter-increment:chapter section 2 page; /* chapter와 page는 1씩 증가 section은 2씩 증가. */
+					}
+				</style>
+			</textarea>
 		</div>
 	</section>
 
@@ -116,11 +162,25 @@
 				</li>
 			</ol>
 		</div>
+		<div class="uk_gist_code_box mt_ms" data-tit="CSS Counter [counter]">
+			<textarea readonly="readonly">
+				<!-- html 예제 -->
+				<ol class="list">
+					<li><li>
+					<li><li>
+					<li><li>
+				</ol>
 
-		<div class="ex_code edit_code mt_m" data-target="css/step02/3.3.counter/3.3.counter-syntax.html">
-			<div class="uk_editor min-height-500" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+				<!-- style 예제 -->
+				<style>
+					.list { counter-reset: section;}
+					.list li {list-style:none;}
+					.list li:before {
+						counter-increment: section;
+						content: counter(section) ". ";
+					}
+				</style>
+			</textarea>
 		</div>
 	</section>
 
@@ -128,12 +188,11 @@
 	<section class="txt_ex indent mt_l">
 		<h2 class="ml_mn">counters() 문법</h2>
 		<p class="mt_s">
-			<code>counters(name, string, style)</code>
-			<code>counters()</code> 함수도 <code>counters(name, string)</code>나 <code>counters(name, string, style)</code> 두 가지 형태로 사용할 수 있습니다.
-			생성된 텍스트는 가상 요소가 속한 모든 범위에서 지정된 이름을 가진 <code>counters</code>의 값으로, 바깥 쪽부터 안쪽까지 값이 주어지며 지정된 문자열로 구분됩니다.
+			<code>counters(name, string, style)</code><br>
+			<code>counters()</code> 함수도 <code>counters(name, string)</code>나 <code>counters(name, string, style)</code> 두 가지 형태로 사용할 수 있습니다.<br>
+			생성된 텍스트는 가상 요소가 속한 모든 범위에서 지정된 이름을 가진 <code>counters</code>의 값으로, 바깥 쪽부터 안쪽까지 값이 주어지며 지정된 문자열로 구분됩니다.<br>
 			<code>counters</code>는 지정된 스타일(기본값은 십진수decimal)로 렌더링 됩니다.
 		</p>
-
 		<div class="ol_lst indent mt_s">
 			<ol>
 				<li>name, string 값은 필수 (기본값 decimal)</li>
@@ -141,24 +200,46 @@
 				<li>style은 선택적으로 사용합니다.</li>
 			</ol>
 		</div>
+		<div class="uk_gist_code_box mt_ms" data-tit="CSS Counter [counters]">
+			<textarea readonly="readonly">
+				<!-- html 예제 (counters 적용 시 html도 아래 예제처럼 중첩된 구조로 만들어야 합니다.) -->
+				<div class="list">
+					<ol>
+						<li><li>
+						<li><li>
+						<li>
+							<ol>
+								<li><li>
+								<li><li>
+								<li><li>
+							</ol>
+						<li>
+					</ol>
+				</div>
 
-		<div class="ex_code edit_code mt_m" data-target="css/step02/3.3.counter/3.3.counters-syntax.html">
-			<div class="uk_editor min-height-500" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+				<!-- style 예제 -->
+				<style>
+					.list ol { counter-reset: chapter;}
+					.list li {list-style:none;}
+					.list li:before {
+						counter-increment: chapter;
+						content: counter(chapter ".") ". ";
+					}
+				</style>
+			</textarea>
 		</div>
 	</section>
 
-	<figure class="img_figure mt_l">
-		<figcaption class="mt_0 font-16 color">counters 문법의 중첩 관계도</figcaption>
-		<img src="/ukncs/images/css/cssMiddleclass/uxkm_counters.svg" alt="counters 문법의 중첩 관계도" class="mt_m">
-	</figure>
 
 	<section class="view_editor edit_code mt_l" data-target="css/step02/3.3.counter/3.3.counter.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent min-height-500" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
+		<figure class="img_figure indent mt_m">
+			<figcaption class="mt_0 font-16 t_blue ">위 예제 counters 문법의 중첩 관계도</figcaption>
+			<img src="/ukncs/images/css/cssMiddleclass/uxkm_counters.svg" alt="counters 문법의 중첩 관계도" class="mt_m">
+		</figure>
 	</section>
 
 	<aside class="browser_support mt_l" data-tit="counter">
