--- a/assets/02-css/03-cssMiddleclass/07-css_atrule.html
+++ b/assets/02-css/03-cssMiddleclass/07-css_atrule.html
@@ -30,11 +30,12 @@
 			여러 @charset at-규칙이 정의된 경우, 첫 번째 것만 사용되고 HTML 요소의 style attribute
 			또는 HTML 페이지의 문자 집합과 관련 있는 <code>&lt;style&gt;</code> 요소 내에서 사용될 수 없습니다.
 		</p>
-		<p class="mt_ms">
-			<code>ex) @charset "utf-8";</code><br>
-			<code>@charset "UTF-8"; /* 스타일 시트의 인코딩을 Unicode UTF-8로 설정 */</code><br>
-			<code>@charset 'iso-8859-15'; /* 스타일 시트의 인코딩을 Latin-9 (서유럽어, euro sign 있는) 로 설정 */</code>
-		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="@charset">
+			<textarea readonly="readonly">
+				@charset "utf-8"; /* 스타일 시트의 인코딩을 Unicode UTF-8로 설정 */
+				@charset 'iso-8859-15'; /* 스타일 시트의 인코딩을 Latin-9 (서유럽어, euro sign 있는) 로 설정 */
+			</textarea>
+		</div>
 		<aside class="browser_support mt_m" data-tit="@charset">
 			<ul>
 				<li class="ie">5.5+</li>
@@ -51,23 +52,29 @@
 	<section class="txt_ex indent mt_l">
 		<h2 class="ml_mn t_blue">@import</h2>
 		<p class="mt_ms">
-			다른 스타일 시트에서 스타일 규칙을 가져올 때 쓰입니다.<br>
+			스타일 시트에서 다른 스타일 규칙을 가져올 때 쓰입니다.<br>
 			이 규칙은 <code>@charset</code> 규칙을 제외하고 모든 다른 종류의 규칙보다 선행해야 합니다.
 		</p>
-		<p class="mt_ms">
-			<code>@import는 중첩 명령문이 아니기 때문에 조건부 그룹 @규칙 내에 사용할 수 없습니다.</code><br>
-			<code>@import [ &lt;string&gt; | &lt;url&gt; ] [ &lt;media-query-list&gt; ];</code><br>
-			<code>@import &apos;uxkm.css&apos;; /* 일반적인 사용 */</code><br>
-			<code>@import url(&quot;uxkmprint.css&quot;) print; /* 인쇄용 */</code><br>
-			<code>@import url(&quot;bluish.css&quot;) speech; /* 페이지를 읽어주는 화면낭독기 */</code><br>
-			<code>@import url(&quot;chrome://communicator/skin/&quot;); /* URL이 지정되지 않은 경우 자동으로 할당된 경우 */</code><br>
-			<code>@import &quot;uxReset.css&quot; screen;/* 컴퓨터 스크린, 테블릿, 스마트폰 등 screen을 지정 않해도 기본이 screen임 */</code><br>
-			<code>@import url(&apos;landscape.css&apos;) screen and (orientation:landscape); /* 화면이 가로/세로 유형을 선택 */</code>
+		<p class="mt_s">
+			<code>@import</code>는 중첩 명령문이 아니기 때문에 조건부 그룹 @규칙 내에 사용할 수 없습니다.
 		</p>
+		<!--
 		<div class="view_editor ex_code mt_m" data-target="css/step02/3.7.at-rule/3.7.at-rule-import1.html">
 			<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
+		</div>
+		-->
+		<div class="uk_gist_code_box mt_ms" data-tit="@import">
+			<textarea readonly="readonly">
+				@import [ <string> | <url> ] [ <media-query-list> ];
+				@import 'uxkm.css'; /* 일반적인 사용 */
+				@import url("uxkmprint.css") print; /* 인쇄용 */
+				@import url("bluish.css") speech; /* 페이지를 읽어주는 화면낭독기 */
+				@import url("chrome://communicator/skin/"); /* URL이 지정되지 않은 경우 자동으로 할당된 경우 */
+				@import "uxReset.css" screen;/* 컴퓨터 스크린, 테블릿, 스마트폰 등 screen을 지정 않해도 기본이 screen임 */
+				@import url('landscape.css') screen and (orientation:landscape); /* 화면이 가로/세로 유형을 선택 */
+			</textarea>
 		</div>
 		<p class="mt_m">
 			<code>@import</code> 규칙을 사용해도 추가하는 CSS 파일의 개수가 늘어나면 여전히 웹 서버의 부하는 커질 수밖에 없습니다.<br>
@@ -76,10 +83,18 @@
 			다음 예제는 프린트할 때에는 <mark>firstStyleSheet.css</mark> 파일을 불러오고,
 			스크린이 가로 방향으로 설정되어 있을 때는 <mark>secondStyleSheet.css</mark> 파일을 불러오는 예제입니다.
 		</p>
+		<!--
 		<div class="view_editor ex_code mt_m" data-target="css/step02/3.7.at-rule/3.7.at-rule-import2.html">
 			<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
 				<div class="code_wrap"><textarea></textarea></div>
 			</div>
+		</div>
+		-->
+		<div class="uk_gist_code_box mt_ms" data-tit="@import">
+			<textarea readonly="readonly">
+				@import url("firstStyleSheet.css") print;
+				@import "secondStyleSheet.css" screen and (orientation:landscape);
+			</textarea>
 		</div>
 		<aside class="browser_support mt_m" data-tit="@import">
 			<ul>
@@ -118,10 +133,28 @@
 			문서 어디에든 xmlns attribute가 없을지라도, <code>&lt;svg&gt;</code> 및 <code>&lt;math&gt;</code> 요소는
 			그들의 적절한 네임스페이스 (http://www.w3.org/2000/svg 및 http://www.w3.org/1998/Math/MathML) 가 할당됨을 뜻합니다.
 		</p>
-		<div class="view_editor ex_code mt_m" data-target="css/step02/3.7.at-rule/3.7.at-rule-namespace.html">
-			<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+		<div class="uk_gist_code_box mt_ms" data-tit="@namespace">
+			<textarea readonly="readonly">
+				/* 기본 네임스페이스 */
+				@namespace url('XML-namespace-URL');
+				@namespace "XML-namespace-URL";
+
+				/* 접두어 붙은 네임스페이스 */
+				@namespace prefix url('XML-namespace-URL');
+				@namespace prefix "XML-namespace-URL";
+
+				@namespace url('http://www.w3.org/1999/xhtml');
+				@namespace svg url('http://www.w3.org/2000/svg');
+
+				/* 이는 모든 XHTML <a> 요소와 일치합니다, XHTML이 접두어 붙지 않은 기본 네임스페이스이기에 */
+				a {}
+
+				/* 이는 모든 SVG <a> 요소와 일치합니다 */
+				svg|a {}
+
+				/* 이는 XHTML 및 SVG <a>요소 둘 다와 일치합니다 */
+				*|a {}
+			</textarea>
 		</div>
 		<aside class="browser_support mt_m" data-tit="@namespace">
 			<ul>
@@ -135,33 +168,10 @@
 		</aside>
 	</section>
 
-	<p class="mt_l t_black">
+	<p class="mt_xl t_black font-16 weight-600">
 		위에서 지정된 규칙외에 중첩 문의 부분 집합으로 이루어진 중첩 @-규칙 대해 설명합니다.<br>
 		중첩 @-규칙 - 중첩 문의 부분 집합으로, 조건부 그룹 규칙 속뿐만 아니라 스타일 시트의 문으로 사용될 수 있습니다.
 	</p>
-
-	<!-- @media -->
-	<section class="txt_ex indent mt_l">
-		<h2 class="ml_mn t_blue">@media</h2>
-		<p class="mt_ms">
-			장치가 미디어 질의(media query)를 사용하여 정의된 조건의 기준을 만족하면 해당 콘텐츠를 적용하는 조건부 그룹 규칙압니다.
-		</p>
-		<div class="view_editor ex_code mt_m" data-target="css/step02/3.7.at-rule/3.7.at-rule-media.html">
-			<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
-		</div>
-		<aside class="browser_support mt_m" data-tit="@media">
-			<ul>
-				<li class="ie">9+</li>
-				<li class="edge">12.0</li>
-				<li class="chrome">21.0</li>
-				<li class="firefox">3.5</li>
-				<li class="opera">9.0</li>
-				<li class="safari">4.0</li>
-			</ul>
-		</aside>
-	</section>
 
 	<!-- @supports -->
 	<section class="txt_ex indent mt_l">
@@ -171,10 +181,56 @@
 			규칙은 코드의 최상위 수준에 배치되거나 다른 조건부 그룹 규칙 안에 중첩 될 수 있습니다.<br>
 			지원 조건은 하나 이상의 키-값 쌍을 논리곱(and), 논리합(or), 부정(not)으로 연결해 구성합니다. 괄호로 묶어 우선순위를 지정할 수도 있습니다.
 		</p>
-		<div class="view_editor ex_code mt_m" data-target="css/step02/3.7.at-rule/3.7.at-rule-supports.html">
-			<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+		<div class="uk_gist_code_box mt_ms" data-tit="@supports">
+			<textarea readonly="readonly">
+				/* 가장 기본적인 지원 조건은 단순한 선언(속성 이름과 그 값)입니다. 선언은 괄호로 묶여야 합니다.*/
+				/* 브라우저가 transform-origin 속성의 값으로 5% 5%가 유효하다고 여길 때 통과합니다. */
+				@supports (transform-origin: 5% 5%) {}
+
+				/* 주어진 CSS 속성의 지원 여부 판별 예시 */
+				@supports (animation-name: test) {
+					… /* 애니메이션 속성을 접두사 없이 사용할 수 있을 때 CSS 적용 */
+					@keyframes { /* 다른 @-규칙을 중첩 가능 */
+					…
+					}
+				}
+				/* 주어진 CSS 속성 및 접두사 버전의 지원 여부 판별 예시 */
+				@supports ( (perspective: 10px) or (-moz-perspective: 10px) or (-webkit-perspective: 10px) or (-ms-perspective: 10px) or (-o-perspective: 10px) ) {
+					… /* 접두사가 붙더라도 3D 변형을 지원하면 CSS 적용 */
+				}
+
+				/* 특정 CSS 속성의 미지원 여부 판별 예시 */
+				@supports not ((text-align-last: justify) or (-moz-text-align-last: justify) ){
+					… /* text-align-last: justify를 대체할 CSS */
+				}
+
+				/* 사용자 정의 속성 지원 여부 판별 예시 */
+				@supports (--foo: green) {
+					body {
+						color: var(--varName);
+					}
+				}
+
+				/* :is()를 지원하지 않는 브라우저에서는 무시함 */
+				:is(ul, ol) > li {
+					… /* :is() 선택자를 지원할 때 적용할 CSS */
+				}
+
+				@supports not selector(:is(a, b)) {
+					/* :is()를 지원하지 않을 때 대체할 CSS */
+					ul > li,
+					ol > li {
+						… /* :is()를 지원하지 않을 때 적용할 CSS */
+					}
+				}
+
+				@supports selector(:nth-child(1n of a, b)) {
+					/* @supports로 먼저 묶지 않으면 :nth-child()의 of 구문을 지원하지 않는 브라우저에서 스타일을 잘못 적용할 수 있음 */
+					:is(:nth-child(1n of ul, ol) a, details > summary) {
+						… /* :is() 선택자와 :nth-child()의 of 구문을 지원할 때 적용할 CSS */
+					}
+				}
+			</textarea>
 		</div>
 		<aside class="browser_support mt_m" data-tit="@supports">
 			<ul>
@@ -188,6 +244,51 @@
 		</aside>
 	</section>
 
+	<!-- @media -->
+	<section class="txt_ex indent mt_l">
+		<h2 class="ml_mn t_blue">@media</h2>
+		<p class="mt_ms">
+			장치가 미디어 질의(media query)를 사용하여 정의된 조건의 기준을 만족하면 해당 콘텐츠를 적용하는 조건부 그룹 규칙입니다.<br>
+			<code>min-width</code> 또는 <code>max-width</code> 를 활용하여 반응형 레이아웃(Responsive layout)을 구현할 수 있습니다.
+		</p>
+		<div class="uk_gist_code_box mt_ms" data-tit="@media">
+			<textarea readonly="readonly">
+				/* 최상위 코드 레벨 */
+				@media screen and (min-width: 900px) {
+					article {
+						padding: 1rem 3rem;
+					}
+				}
+
+				/* 다른 조건부 @규칙 내에 중첩 */
+				@supports (display: flex) {
+					@media screen and (min-width: 900px) {
+						article {
+							display: flex;
+						}
+					}
+				}
+
+				/* desktop first 반응형 레이아웃 예시 (아래는 예시에 의한 수치이므로 실제 프로젝트에 사용할 때는 bootstrap의 media사이즈를 참고하는 것을 추천) */
+				/* 기본 1280+ 해상도의 기본 css 선언 후 */
+				@media(max-width:1279px;){ /* wrap이 1280px보다 클 경우 그보다 작은 브라우져 크기에도 대응 */ }
+				@media(max-width:993px;){ /* 테블릿 pc 해상도에 대응 */ }
+				@media(max-width:767px;){ /* 작은 테블릿 pc & 모바일 가로 모드에 대응 */ }
+				@media(max-width:620px;){ /* 모바일 세로 모드에 대응 */ }
+			</textarea>
+		</div>
+		<aside class="browser_support mt_m" data-tit="@media">
+			<ul>
+				<li class="ie">9+</li>
+				<li class="edge">12.0</li>
+				<li class="chrome">21.0</li>
+				<li class="firefox">3.5</li>
+				<li class="opera">9.0</li>
+				<li class="safari">4.0</li>
+			</ul>
+		</aside>
+	</section>
+
 	<!-- @page -->
 	<section class="txt_ex indent mt_l">
 		<h2 class="ml_mn t_blue">@page</h2>
@@ -195,10 +296,16 @@
 			문서를 인쇄할 때 일부 CSS 속성을 수정하는 데 쓰입니다. <code>@page</code>로 모든 CSS 속성을 바꿀 수는 없습니다.<br>
 			문서의 margin, orphan, widow(앞단에서 넘어온 짤막한 행) 및 page break만 바꿀 수 있습니다. 다른 CSS 속성을 바꾸려는 시도는 무시됩니다.
 		</p>
-		<div class="view_editor ex_code mt_m" data-target="css/step02/3.7.at-rule/3.7.at-rule-page.html">
-			<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+		<div class="uk_gist_code_box mt_ms" data-tit="@page">
+			<textarea readonly="readonly">
+				@page {
+					margin: 1cm;
+				}
+
+				@page :first {
+					margin: 2cm;
+				}
+			</textarea>
 		</div>
 		<aside class="browser_support mt_m" data-tit="@page">
 			<ul>
@@ -216,7 +323,8 @@
 	<section class="txt_ex indent mt_l">
 		<h2 class="ml_mn t_blue">@font-face</h2>
 		<p class="mt_ms">
-			텍스트를 표시 할 사용자 정의 글꼴을 지정합니다. 글꼴은 원격 서버나 로컬 컴퓨터에서 사용자 컴퓨터에로드 할 수 있습니다.
+			텍스트를 표시 할 사용자 정의 글꼴을 지정합니다. 글꼴은 원격 서버나 로컬 컴퓨터에서 사용자 컴퓨터에로드 할 수 있습니다.<br>
+			<code>@font-face</code>을 사용하는 자세한 방법은 중급과정 <a href="/?data=Assets&CSS&cssMiddleclass&css_fontface" class="uk_link t_blue underline weight-600">@font-face</a>에서 설명.
 		</p>
 	</section>
 
@@ -225,7 +333,7 @@
 		<h2 class="ml_mn t_blue">@keyframes</h2>
 		<p class="mt_ms">
 			애니메이션 시퀀스를 따라 키 프레임 (또는 웨이 포인트)의 스타일을 정의하여 CSS 애니메이션 시퀀스의 중간 단계를 제어합니다.<br>
-			<code>@keyframes</code>을 사용하는 자세한 방법은 고급과정 Animation에서 설명.
+			<code>@keyframes</code>을 사용하는 자세한 방법은 고급과정 <a href="/?data=Assets&CSS&cssAdvanced&css_animation" class="uk_link t_blue underline weight-600">Animation</a>에서 설명.
 		</p>
 	</section>
 
