--- a/assets/02-css/03-cssMiddleclass/05-css_ir.html
+++ b/assets/02-css/03-cssMiddleclass/05-css_ir.html
@@ -34,9 +34,9 @@
 		<p class="t_blue">w:48px h:48px / margin:10px / 총사이즈 : w:106px h:154px</p>
 	</figure>
 
-	<section class="view_editor edit_code mt_l" data-target="css/step02/3.5.ir/3.5.ir.html">
+	<section class="view_editor edit_code mt_xl" data-target="css/step02/3.5.ir/3.5.ir.html">
 		<h3 class="ve_tit">위 Sprite Image를 사용하여 CSS IR(Image Replacement) 기법으로 활용한 방법입니다.</h3>
-		<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
@@ -65,10 +65,25 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor ex_code mt_m" data-target="css/step02/3.5.ir/3.5.ir-phark-method.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_m" data-tit="Daum CSS Convention [Phark Method]">
+				<textarea readonly="readonly">
+					<button type="button">검색</button>
+					<a href="#">검색</a>
+
+					<style>
+						button {
+							display:block; width:49px; height:36px; margin:0; padding:0;
+							text-indent:-9999px; /* 들여쓰기를 -9999px만큼 지정하여 글자를 버튼 밖으로 숨김 처리 */
+							background:url('btn_search.gif') no-repeat;
+							border:none;
+						}
+						a {
+							display:block; overflow:hidden; float:left; width:49px; height:36px;
+							text-indent:-9999px; /* 들여쓰기를 -9999px만큼 지정하여 글자를 버튼 밖으로 숨김 처리 */
+							background:url('btn_search.gif') no-repeat;
+						}
+					</style>
+				</textarea>
 			</div>
 		</article>
 
@@ -76,7 +91,7 @@
 		<article class="indent_max mt_l">
 			<h3 class="ml_mn"><i class="t_blue">WA IR</i> (권장)</h3>
 			<p class="mt_s">
-				이미지로 대체할 엘리먼트에 배경이미지를 설정하고 글자는 <code>&lt;span&gt;</code>태그로 감싼 후 <code>z-index:-1</code>을 이용하여 화면에 안보이게 처리합니다.
+				이미지로 대체할 엘리먼트에 배경이미지를 설정하고 글자는 <code>&lt;span&gt;</code>태그로 감싼 후 <code>position:relative; z-index:-1</code>을 이용하여 화면에 안보이게 처리합니다.
 			</p>
 			<div class="ol_lst indent mt_ms">
 				<ol>
@@ -92,10 +107,27 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor ex_code mt_m" data-target="css/step02/3.5.ir/3.5.ir-wa-ir.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_m" data-tit="Daum CSS Convention [WA IR]">
+				<textarea readonly="readonly">
+					<button type="button"><span>검색</span></button>
+					<a href="#"><span>검색</span></a>
+
+					<style>
+						button {
+							width:49px; height:36px; margin:0; padding:0;
+							background:url('btn_search.gif') no-repeat;
+							border:none;
+						}
+						a {
+							display:block; width:49px; height:36px;
+							text-decoration:none;
+							background:url('btn_search.gif') no-repeat;
+						}
+						span {
+							position:relative; z-index:-1;
+						}
+					</style>
+				</textarea>
 			</div>
 		</article>
 
@@ -119,10 +151,27 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor ex_code mt_m" data-target="css/step02/3.5.ir/3.5.ir-farhner-image-replacement.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_m" data-tit="Daum CSS Convention [Farhner Image Replacement]">
+				<textarea readonly="readonly">
+					<button type="button"><span>검색</span></button>
+					<a href="#"><span>검색</span></a>
+
+					<style>
+						button {
+							width:49px; height:36px; margin:0; padding:0;
+							background:url('btn_search.gif') no-repeat;
+							border:none;
+						}
+						a {
+							display:block; width:49px; height:36px;
+							text-decoration:none;
+							background:url('btn_search.gif') no-repeat;
+						}
+						span {
+							display:none;
+						}
+					</style>
+				</textarea>
 			</div>
 		</article>
 
@@ -145,10 +194,28 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor ex_code mt_m" data-target="css/step02/3.5.ir/3.5.ir-dwyer-method.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_m" data-tit="Daum CSS Convention [Dwyer Method]">
+				<textarea readonly="readonly">
+					<button type="button"><span>검색</span></button>
+					<a href="#"><span>검색</span></a>
+
+					<style>
+						button {
+							width:49px; height:36px; margin:0; padding:0;
+							background:url('btn_search.gif') no-repeat;
+							border:none;
+						}
+						a {
+							display:block; width:49px; height:36px;
+							text-decoration:none;
+							background:url('btn_search.gif') no-repeat;
+						}
+						span {
+							display:block; overflow:hidden;
+							width:0; height:0;
+						}
+					</style>
+				</textarea>
 			</div>
 		</article>
 
@@ -172,10 +239,35 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor ex_code mt_m" data-target="css/step02/3.5.ir/3.5.ir-gilder-levin.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_m" data-tit="Daum CSS Convention [Gilder/Levin Method]">
+				<textarea readonly="readonly">
+					<button type="button"><span></span>검색</button>
+					<a href="#"><span></span>검색</a>
+
+					<style>
+						button {
+							display:block; position:relative;
+							width:49px; height:36px;
+							background-color:transparent;
+							cursor:pointer;
+							border:0;
+						}
+						button span {
+							position:absolute; top:0; left:0;
+							width:100%; height:100%;
+							background:url('http://icon.daum-img.net/top/2008/btn_search.gif') no-repeat 0 0;
+						}
+						a {
+							display:block; position:relative;
+							width:49px; height:36px;
+						}
+						a span {
+							position:absolute; top:0; left:0;
+							width:100%; height:100%;
+							background:url('http://icon.daum-img.net/top/2008/btn_search.gif') no-repeat 0 0;
+						}
+					</style>
+				</textarea>
 			</div>
 		</article>
 
@@ -183,7 +275,8 @@
 		<article class="indent_max mt_l">
 			<h3 class="ml_mn"><i class="t_blue">Leahy/Langridge Method</i></h3>
 			<p class="mt_s">
-				이미지로 대체할 엘리먼트 내에 빈 <code>&lt;span&gt;</code>태그를 추가하여 배경이미지를 설정하고 <code>position:absolute</code> 스타일을 이용하여 글자를 덮는 방법입니다.
+				이미지로 대체할 엘리먼트에 배경이미지를 설정하고 <code>height: 0; padding-top: (이미지의 높이 값)</code>을 지정하여 글자를 밑으로 숨기는 방법입니다.<br>
+				<code>height: 0</code>으로 지정하여 글자를 숨기려면 반드시 <code>overflow: hidden</code>이 선언되어야 합니다.
 			</p>
 			<div class="ol_lst indent mt_ms">
 				<ol>
@@ -200,10 +293,25 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor ex_code mt_m" data-target="css/step02/3.5.ir/3.5.ir-leahy-langridge.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_m" data-tit="Daum CSS Convention [Leahy/Langridge Method]">
+				<textarea readonly="readonly">
+					<button type="button">검색</button>
+					<a href="#">검색</a>
+
+					<style>
+						button {
+							display:block; overflow:hidden;
+							width:49px; height:0; padding:36px 0 0 0;
+							background:url('btn_search.gif') no-repeat;
+							border:0;
+						}
+						a {
+							display:block; overflow:hidden;
+							width:49px; height:0; padding:36px 0 0 0;
+							background:url('btn_search.gif') no-repeat;
+						}
+					</style>
+				</textarea>
 			</div>
 		</article>
 
@@ -226,10 +334,29 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor ex_code mt_m" data-target="css/step02/3.5.ir/3.5.ir-applied-method.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_m" data-tit="Daum CSS Convention [span padding : applied Method]">
+				<textarea readonly="readonly">
+					<button type="button"><span>검색</span></button>
+					<a href="#"><span>검색</span></a>
+
+					<style>
+						button {
+							display:block; overflow:hidden;
+							width:49px; height:36px; margin:0; padding:0;
+							border:none;
+							background:url('btn_search.gif') no-repeat;
+						}
+						a {
+							display:block; overflow:hidden;
+							width:49px; height:36px;
+							background:url('btn_search.gif') no-repeat;
+						}
+						span {
+							display:block;
+							padding-top:40px
+						}
+					</style>
+				</textarea>
 			</div>
 		</article>
 
@@ -254,10 +381,35 @@
 					</li>
 				</ol>
 			</div>
-			<div class="view_editor ex_code mt_m" data-target="css/step02/3.5.ir/3.5.ir-script-replace-method.html">
-				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="uk_gist_code_box mt_m" data-tit="Daum CSS Convention [script replace Method]">
+				<textarea readonly="readonly">
+					<button type="button" id="btn_button">검색</button>
+					<a href="#" id="btn_a">검색</a>
+
+					<style>
+						button {
+							width:49px; height:36px; margin:0; padding:0;
+							border:none;
+							background-image:none; background-color:transparent;
+						}
+						button img {
+							display:block;
+						}
+						a img {
+							border:0;
+						}
+					</style>
+
+					<script>
+						function replaceImg() {
+							var replaceImgButton = document.getElementById("btn_button");
+							replaceImgButton.innerHTML = "<img src=\"" + replaceImgButton.className + ".gif\" alt=\"" + replaceImgButton.innerHTML + "\" />";
+							var replaceImgA = document.getElementById("btn_a");
+							replaceImgA.innerHTML = "<img src=\"" + replaceImgA.className + ".gif\" alt=\"" + replaceImgA.innerHTML + "\" />";
+						}
+						window.onload = replaceImg;
+					</script>
+				</textarea>
 			</div>
 		</article>
 	</section>
